# zkpchallenge

./: Cargo.toml  README.md
src/: challenge.rs  commitment.rs  confidential_tx.rs  inner_product.rs  main.rs  network.rs  prover.rs  verifier.rs
