[package]
name = "bulletproof"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.28", features = ["rand", "global-context", "hashes"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bitcoin-rpc = "0.2.0"
bitcoincore-rpc = "0.19.0"
use = "0.0.1-pre.0"
hex = "0.4.3"
sha2 = "0.10.8"
